[package]
name        = "netdiag"
version     = "0.1.0"
edition     = "2018"

authors     = ["Will <will@kentik.com>"]
description = "Network diagnostics"
license     = "GPL-2.0"
readme      = "README.md"
repository  = "https://github.com/kentik/netdiag"

[dependencies]
anyhow      = "1.0.40"
etherparse  = "0.9.0"
futures     = "0.3.13"
libc        = "0.2.92"
log         = "0.4.14"
parking_lot = "0.11.1"
rand        = "0.8.3"
raw-socket  = "0.0.2"

[dependencies.tokio]
version     = "1.4.0"
features    = ["net"]
default-features = false

[dev-dependencies]
gumdrop     = "0.8.0"

[dev-dependencies.tokio]
version     = "1.4.0"
features    = ["full"]
