[package]
name        = "netdiag"
version     = "0.2.1"
edition     = "2018"

authors     = ["Will <will@kentik.com>"]
description = "Network diagnostics"
license     = "GPL-2.0"
readme      = "README.md"
repository  = "https://github.com/kentik/netdiag"

[dependencies]
anyhow      = "1.0.52"
etherparse  = "0.10.1"
futures     = "0.3.19"
libc        = "0.2.112"
log         = "0.4.14"
parking_lot = "0.11.2"
rand        = "0.8.4"
raw-socket  = "0.0.2"
socket2     = "0.4.2"

[dependencies.tokio]
version     = "1.15.0"
features    = ["net"]
default-features = false

[dev-dependencies]
gumdrop     = "0.8.0"

[dev-dependencies.tokio]
version     = "1.15.0"
features    = ["full"]
