[package]
name        = "netdiag"
version     = "0.3.0"
edition     = "2018"

authors     = ["Will <will@kentik.com>"]
description = "Network diagnostics"
license     = "GPL-2.0"
readme      = "README.md"
repository  = "https://github.com/kentik/netdiag"

[dependencies]
anyhow      = "1.0.56"
etherparse  = "0.10.1"
futures     = "0.3.21"
libc        = "0.2.121"
log         = "0.4.16"
parking_lot = "0.12.0"
rand        = "0.8.5"
raw-socket  = "0.0.2"
socket2     = "0.4.4"

[dependencies.tokio]
version     = "1.17.0"
features    = ["net"]
default-features = false

[dev-dependencies]
env_logger  = "0.9.0"
gumdrop     = "0.8.1"

[dev-dependencies.tokio]
version     = "1.17.0"
features    = ["full"]
